# Readability_scorer

./: CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  example.txt  prereqs.sh  run.sh
.github/workflows/: test.yml
include/: auto_readability.h  colemanLiau.h  fleschkincaid.h  main.h  smog.h  word_attributes.h  word_attributes2.h
load_c/: load.py
src/: auto_readability.c  coleman.c  fleschkincaid.c  main.c  readFile.c  smog.c  word_attributes.c  word_attributes2.c
test/: test_add.py  test_auto_readable.py  test_coleman.py  test_word_attributes.py
